samples/_failures_safe/1761800552_50c14f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e4e2c4c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9e4e2c4c.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
